# integer

./: CMakeLists.txt  README.md  README.org
integer/: CMakeLists.txt  config.hpp.in  integer.hpp
integer/details/: base_types.hpp  concepts.hpp  import.hpp  integer.hpp  negative.hpp  nonnegative.hpp  nonpositive.hpp  positive.hpp  validate_bounds.hpp  validate_nonnegative.hpp  validate_size.hpp  wrapper.hpp
integer_testing/: CMakeLists.txt  integer_test.cpp  negative_test.cpp  nonnegative_test.cpp  nonpositive_test.cpp  positive_test.cpp
scripts/: check-format.sh
